--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "vue-slick-carousel": "^1.0.6"
   },
   "devDependencies": {
+    "@aceforth/nuxt-optimized-images": "^1.3.0",
     "@nuxtjs/tailwindcss": "^3.1.0",
-    "nuxt-purgecss": "^1.0.0"
+    "nuxt-purgecss": "^1.0.0",
+    "imagemin-mozjpeg": "^9.0.0"
   }
 }
